# ChangeLog for app-misc/pax-utils
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/pax-utils/ChangeLog,v 1.172 2015/03/04 22:36:12 vapier Exp $

*pax-utils-1.0.1 (04 Mar 2015)

  04 Mar 2015; Mike Frysinger <vapier@gentoo.org> +pax-utils-1.0.1.ebuild:
  Version bump.

  03 Mar 2015; Mike Frysinger <vapier@gentoo.org> pax-utils-1.0.ebuild:
  Update HOMEPAGE to the wiki.

*pax-utils-1.0 (02 Mar 2015)

  02 Mar 2015; Mike Frysinger <vapier@gentoo.org> +pax-utils-1.0.ebuild:
  Version bump.

*pax-utils-0.9.2 (20 Nov 2014)

  20 Nov 2014; Mike Frysinger <vapier@gentoo.org> +pax-utils-0.9.2.ebuild:
  Version bump.

  04 Nov 2014; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due #21862

  02 Nov 2014; Agostino Sarubbo <ago@gentoo.org> pax-utils-0.8.1.ebuild:
  Stable for alpha, wrt bug #525842

  30 Oct 2014; Agostino Sarubbo <ago@gentoo.org> pax-utils-0.8.1.ebuild:
  Stable for x86, wrt bug #525842

  29 Oct 2014; Agostino Sarubbo <ago@gentoo.org> pax-utils-0.8.1.ebuild:
  Stable for sparc, wrt bug #525842

  21 Oct 2014; Mike Frysinger <vapier@gentoo.org> pax-utils-0.8.1.ebuild:
  Mark arm64/ia64/m68k/s390/sh stable.

  19 Oct 2014; Jeroen Roovers <jer@gentoo.org> pax-utils-0.8.1.ebuild:
  Stable for HPPA (bug #525842).

*pax-utils-0.9.1 (19 Oct 2014)

  19 Oct 2014; Mike Frysinger <vapier@gentoo.org> -pax-utils-0.9-r1.ebuild,
  +pax-utils-0.9.1.ebuild:
  Version bump to not install autogen #525852.

*pax-utils-0.9-r1 (19 Oct 2014)

  19 Oct 2014; Mike Gilbert <floppym@gentoo.org> +pax-utils-0.9-r1.ebuild,
  -pax-utils-0.9.ebuild:
  Temporary fix for file collison on /usr/bin/autogen #525852.

  19 Oct 2014; Anthony G. Basile <blueness@gentoo.org> pax-utils-0.8.1.ebuild:
  Stable on arm, ppc and ppc64.  Bug #525842

*pax-utils-0.9 (19 Oct 2014)

  19 Oct 2014; Mike Frysinger <vapier@gentoo.org> +pax-utils-0.9.ebuild:
  Version bump.
