@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/pax-utils
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/pax-utils/ChangeLog,v 1.172 2015/03/04 22:36:12 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/pax-utils/ChangeLog,v 1.173 2015/03/10 05:34:03 vapier Exp $
+
+*pax-utils-1.0.2 (10 Mar 2015)
+
+  10 Mar 2015; Mike Frysinger <vapier@gentoo.org> +pax-utils-1.0.2.ebuild:
+  Version bump.
 
 *pax-utils-1.0.1 (04 Mar 2015)
 
